fixed css layout issues with client view appointment interface
fixed css layout issues with client view appointment interface

--- a/endpoints-skeleton-archetype/src/main/webapp/css/viewClientAppointment.css
+++ b/endpoints-skeleton-archetype/src/main/webapp/css/viewClientAppointment.css
@@ -1,21 +1,34 @@
 @charset "utf-8";
 /* CSS Document */
 
-
+h2{
+	color:#0A25BF;
+	padding-bottom: 5%;
+}
 
 tbody tr td{
 	background-color: lightgray;
 }
 .outContainer{
+	margin-top:5%;
 	padding-top: 10%;
 	text-align: center;
+	display: grid;
+	padding-left: 2%;
+	padding-right: 2%;
+	padding-top: 2%;
+	padding-bottom: 10%;
+	margin-left:auto;
+	margin-right:auto;
+	background-color: lightgray;
+	border-radius:25px;
 }
 .container3{
 	
 	display: grid;
 	padding-left: 2%;
 	padding-right: 2%;
-	padding-top: 2%;
+	padding-top: 10%;
 	padding-bottom: 10%;
 	margin-left:auto;
 	margin-right:auto;
@@ -46,7 +59,6 @@ tbody tr td{
 }
 .right h2{
 	color:#0A25BF;
-	font-size: 22px;
 	padding-bottom: 5%;
 }
 .right table td{
@@ -67,6 +79,7 @@ tbody tr td{
 		
 		border-top: solid;
 		border-bottom:solid;
+		width:100%;
 	}
 
 @media(min-width: 768px){
@@ -127,16 +140,18 @@ tbody tr td{
 	display: inline;
 	}
 	
-	.container3{
-	
-	display: inline-flex;
+	.outContainer{
+	margin-top:5%;
+	display: grid;
 	padding-left: 2%;
 	padding-right: 2%;
 	padding-top: 2%;
-	padding-bottom: 5%;
+	padding-bottom: 10%;
+	margin-left:auto;
+	margin-right:auto;
 	background-color: lightgray;
 	border-radius:25px;
-	width: auto;
+	width: 60%;
 	}
 	.left{
 		padding-top:2%;
